<resources>
    <string name="app_name">GrowingIO</string>
    <string name="app_author">Cpacm</string>
    <string name="app_author_email">kongbai@startdt.com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_description_app">APP LOGO</string>
    <string name="image_description_badge">SDK BADGE</string>
    <string name="dialog_policy_title">用户协议与隐私政策提示</string>
    <string name="dialog_policy_agree">同意并继续</string>
    <string name="dialog_policy_disagree">不同意并退出</string>
    <string name="dialog_policy_link_name">《隐私政策》</string>
    <string name="dialog_policy_message">欢迎使用GrowingIO软件及服务！\n\n为使用GrowingIO软件（以下简称“本软件”）及服务，用户应当阅读并遵守本协议。请用户务必审慎阅读、充分理解本协议各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款将以加粗形式提示用户注意。\n\n为了维护用户的隐私权，请用户在下载、安装或使用本软件及相关服务前，务必认真阅读并透彻理解本协议所有条款，如果用户对本协议有任何疑问，可以通过 legal@growingio.com 与我们联系。\n\n用户的下载、安装、使用、登录等行为即视为已阅读并同意上述条款的约束。如果用户不同意本协议条款中任何内容，用户有权停止下载、安装或使用本软件及相关服务。</string>
    <string name="dialog_policy_link">https://www.growingio.com/privacy.html</string>
    <string name="navi_dashboard_title">功能</string>
    <string name="navi_material_title">控件</string>
    <string name="navi_template_title">模版</string>
    <string name="logcat">日志</string>
    <string name="logcat_filter">Choose Log Level</string>
    <string name="logcat_default_level">level:debug </string>
    <string-array name="logcat_level_list" translatable="false">
        <item>Verbose</item>
        <item>Info</item>
        <item>Debug</item>
        <item>Warn</item>
        <item>Error</item>
    </string-array>
    <string name="qrcode">二维码</string>
    <string name="dashboard_android_sdk">Android SDK</string>
    <string name="dashboard_doc">查看文档 >></string>
    <string name="dashboard_doc_url">https://growingio.github.io/growingio-sdk-docs/docs/android</string>
    <string name="dashboard_sdk_intro">SDK 功能介绍</string>
    <string name="dashboard_sdk_slogan">帮助客户提升数据驱动能力，实现更好的增长。</string>
    <string name="dashboard_sdk_version_badge">https://img.shields.io/github/v/release/growingio/growingio-sdk-android-autotracker</string>
    <string name="dashboard_sdk_license_badge">https://img.shields.io/github/license/growingio/growingio-sdk-android-autotracker</string>
    <string name="dashboard_sdk_platform_badge">https://img.shields.io/badge/platform-Android-brightgreen</string>
    <string name="dashboard_sdk_codecov_badge">https://codecov.io/gh/growingio/growingio-sdk-android-autotracker/branch/master/graph/badge.svg?token=CRD807YQUX</string>
    <string name="dashboard_sdk_repo">https://github.com/growingio/growingio-sdk-android-autotracker</string>
    <string name="dashboard_page_intro">INTRO</string>
    <string name="dashboard_page_code">CODE</string>
    <string name="setting_project_hint">设置SDK的项目ID</string>
    <string name="setting_project_id">ProjectId</string>
    <string name="setting_project_id_hint">项目的AccountId</string>
    <string name="setting_url_scheme">URLScheme</string>
    <string name="setting_url_scheme_hint">用于唤醒App</string>
    <string name="setting_url_scheme_hint2">重新设置后，请在该App内进入圈选服务</string>
    <string name="setting_data_source_id">DataSourceId</string>
    <string name="setting_data_source_id_hint">数据源 ID</string>
    <string name="setting_server_host">收数地址</string>
    <string name="setting_server_host_hint">用于接收数据的服务器地址</string>
    <string name="setting_sdk_btn">设置</string>
    <string name="setting_settle_hint">请设置正确的配置</string>
    <string name="setting_settle_hint2">SDK 配置未做改变！</string>
    <string name="sdk_log_hint">可以打开右下角的 Logcat 查看SDK的运行日志。</string>
    <string name="sdk_init_title">初始化</string>
    <string name="sdk_autotrack_option">无埋点配置</string>
    <string name="sdk_filter_title">事件过滤</string>
    <string name="sdk_filter_event_type">・拦截用户属性事件</string>
    <string name="sdk_filter_event_type_action">发送用户属性事件</string>
    <string name="sdk_filter_event_path">・根据页面路径拦截事件,\n如PAGE事件或VIEW_CLICK事件</string>
    <string name="sdk_filter_event_path_action">发送点击事件</string>
    <string name="sdk_filter_event_name">・根据事件名称拦截自定义事件</string>
    <string name="sdk_filter_event_name_action">发送自定义事件</string>
    <string name="sdk_filter_field">・过滤事件的基本属性</string>
    <string name="sdk_filter_field_action">过滤Language属性</string>
    <string name="sdk_user_login">用户登录</string>
    <string name="sdk_user_hint">用户信息,如 cpacm@gmail.com</string>
    <string name="sdk_user_helper">长度限制大于0且小于等于1000</string>
    <string name="sdk_user_key_hint">账号类型：如 email</string>
    <string name="sdk_user_key_mapping">初始化时需要打开ID-MAPPING功能</string>
    <string name="sdk_user_id_toast">请输入用户信息</string>
    <string name="sdk_user_attributes">设置用户属性信息</string>
    <string name="sdk_user_clear">清除用户信息</string>
    <string name="sdk_data_collect">数据开关</string>
    <string name="sdk_data_collect_hint">数据开关</string>
    <string name="sdk_data_collect_test">测试数据发送</string>
    <string name="sdk_data_flush_test">强制数据上传</string>
    <string name="sdk_data_protobuf">Protobuf</string>
    <string name="sdk_data_json">Json</string>
    <string name="sdk_data_protobuf_hint">使用 Google Protobuf 格式压缩和上传事件数据。</string>
    <string name="sdk_data_json_hint">使用 json 格式上传事件数据。</string>
    <string name="sdk_location">位置信息</string>
    <string name="sdk_location_lon">经度</string>
    <string name="sdk_location_lon_hint">经度范围:-180 ~ 180</string>
    <string name="sdk_location_lat">纬度</string>
    <string name="sdk_location_lat_hint">纬度范围:-90 ~ 90</string>
    <string name="sdk_location_settle">设置</string>
    <string name="sdk_location_clean">清除位置</string>
    <string name="sdk_location_toast">请输入正确的经纬度信息</string>
    <string name="sdk_event_timer">事件计时器</string>
    <string name="sdk_event_timer_custom">事件名称</string>
    <string name="sdk_event_timer_custom_helper">作为自定义事件发送</string>
    <string name="sdk_event_timer_desc">用来计算自定义事件从产生到结束经过的时间</string>
    <string name="sdk_event_timer_default">00:00.00</string>
    <string name="sdk_event_timer_start">开始计时</string>
    <string name="sdk_event_timer_pause">暂停</string>
    <string name="sdk_event_timer_resume">恢复</string>
    <string name="sdk_event_timer_end">结束</string>
    <string name="sdk_event_timer_delete">删除当前计时</string>
    <string name="sdk_event_timer_clean">删除所有计时</string>
    <string name="sdk_event_timer_toast">请输入计时事件名称</string>
    <string name="sdk_impression">视图曝光事件</string>
    <string name="sdk_impression_helper">曝光View显示</string>
    <string name="sdk_impression_settle">设置曝光View</string>
    <string name="sdk_impression_clean">取消曝光View</string>
    <string name="sdk_impression_hint">滑动显示View</string>
    <string name="sdk_unique_tag">唯一路径</string>
    <string name="sdk_unique_tag_settle">设置</string>
    <string name="sdk_unique_tag_toast">请先为按钮设置UniqueTag</string>
    <string name="sdk_unique_tag_helper">设置后点击查看测试按钮的Xpath路径</string>
    <string name="sdk_autotrack_page_title">发送Page事件</string>
    <string name="sdk_autotrack_page">当前页面将会自动发送Page事件</string>
    <string name="sdk_autotrack_page_alias_helper">设置别名用于区别页面</string>
    <string name="sdk_autotrack_page_alias_hint">设置别名,如 LoginPage </string>
    <string name="sdk_autotrack_page_alias">设置别名</string>
    <string name="sdk_autotrack_page_alias_toast">请输入页面别名</string>
    <string name="sdk_autotrack_page_attribute">设置属性</string>
    <string name="sdk_autotrack_page_attribute_toast">请输入有效的页面属性</string>
    <string name="sdk_autotrack_page_size_toast">已达上限</string>
    <string name="sdk_autotrack_page_hint">可以尝试切换界面来实现生命周期变化</string>
    <string name="sdk_attributes_key">KEY</string>
    <string name="sdk_attributes_value">VALUE</string>
    <string name="sdk_attributes_add">+</string>
    <string name="sdk_attributes_sub">-</string>
    <string name="sdk_general_props_title">通用属性</string>
    <string name="sdk_general_props_btn">设置通用属性</string>
    <string name="sdk_general_props_test_btn">测试自定义事件</string>
    <string name="sdk_general_props_attribute_toast">请输入有效的通用属性</string>
    <string name="sdk_api_test">其他SDK功能</string>
    <string name="sdk_api_autotrack">关闭无埋点</string>
    <string name="sdk_api_event_limit">2M 数据测试</string>
    <string name="sdk_api_autotrack_hint">请重新启动应用进程来恢复无埋点采集</string>
    <string name="component_test_btn">测试按钮</string>
    <string name="component_reset_btn">重置按钮</string>
    <string name="component_hybrid">H5内嵌页</string>
    <string name="component_hybrid_hint">在无埋点SDK中，SDK 会自动注入桥接代码，实现数据打通；\n若是在埋点SDK中需要手动注册 Hybrid 模块（参考示例代码）。</string>
    <string name="component_encoder">数据加密</string>
    <string name="component_encoder_hint">SDK 加密模块默认使用 snappy 数据压缩和 xor 简单加密方式，作用于数据网络上传的阶段。</string>
    <string name="component_data_format">数据格式</string>
    <string name="component_protobuf">Google Protobuf</string>
    <string name="component_oaid">OAID 标识符</string>
    <string name="component_oaid_hint">Random Oaid</string>
    <string name="component_oaid_helper">传入OAID作为设备标识符</string>
    <string name="component_oaid_settle">设置OAID</string>
    <string name="component_oaid_toast">请先生成OAID</string>
    <string name="component_oaid_toast2">OAID模块已经注册，无法替换</string>
    <string name="component_advert">广告分析</string>
    <string name="component_advert_register">注册广告模块</string>
    <string name="component_advert_hint">扫码获取链接</string>
    <string name="component_advert_helper">深度链接用于SDK监测广告推广效果</string>
    <string name="component_advert_toast">请输入广告推广链接</string>
    <string name="component_advert_generate">默认链接</string>
    <string name="component_advert_default_url">https://ads-uat.growingio.cn/k4budVa</string>
    <string name="component_advert_parse">解析链接</string>
    <string name="component_abtest">A/B测试</string>
    <string name="component_abtest_hint">请输入实验层ID</string>
    <string name="component_abtest_immediately">最新数据</string>
    <string name="component_abtest_helper">用于获取A/B实验结果</string>
    <string name="component_abtest_fetch">获取</string>
    <string name="component_abtest_toast">请输入实验层ID</string>
    <string name="component_webservice">圈选服务</string>
    <string name="component_webservice_hint">用于启动圈选或者数据校验服务</string>
    <string name="component_webservice_toast">请扫描二维码获取链接</string>
    <string name="component_webservice_et_hint">扫描二维码连接电脑与移动应用</string>
    <string name="component_webservice_helper">访问链接启动服务</string>
    <string name="component_flutter">Flutter</string>
    <string name="material_test_btn">测试</string>
    <string name="material_button">Material Button</string>
    <string name="material_button_label_enabled">Enabled</string>
    <string name="material_button_group">ToggleGroup</string>
    <string name="material_button_sample1">Private</string>
    <string name="material_button_sample2">Team</string>
    <string name="material_button_sample3">Everyone</string>
    <string name="material_floating_button">FloatingActionButton</string>
    <string name="material_floating_button_expanded">Expanded FAB</string>
    <string name="material_radio_button">RadioButton</string>
    <string name="material_checkbox_enabled">enabled</string>
    <string name="material_checkbox_disabled">disabled</string>
    <string name="material_checkbox_indeterminate">indeterminate</string>
    <string name="material_chip">Chips</string>
    <string-array name="material_chip_group">
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>Houston</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>Dallas</item>
        <item>San Jose</item>
        <item>Austin</item>
        <item>Jacksonville</item>
        <item>San Francisco</item>
    </string-array>
    <string name="material_dialog">AppCompat AlertDialog</string>
    <string name="material_dialog_choice">Choices AlertDialog</string>
    <string name="material_menu">Menu</string>
</resources>