<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/handleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sdkHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_project_hint"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toBottomOf="@id/handleView"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projectId"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="@dimen/material_textinput_default_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/setting_project_id"
        app:helperText="@string/setting_project_id_hint"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sdkHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pidEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlScheme"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="@dimen/material_textinput_default_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:hint="@string/setting_url_scheme"
        app:helperText="@string/setting_url_scheme_hint"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataSourceId"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="@dimen/material_textinput_default_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:hint="@string/setting_data_source_id"
        app:helperText="@string/setting_data_source_id_hint"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlScheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dataEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serverHost"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="@dimen/material_textinput_default_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:hint="@string/setting_server_host"
        app:helperText="@string/setting_server_host_hint"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataSourceId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/settle"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_sdk_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverHost" />


</androidx.constraintlayout.widget.ConstraintLayout>